<resources>
    <string name="app_name">SMD-Assignment-4</string>
    <string name="app_logo">logo</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="item_name_placeholder">Item name placeholder</string>
    <string name="item_quantity_placeholder">Item quantity placeholder</string>
    <string name="item_price_placeholder">Item price placeholder</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="shopping_list">Shopping List</string>
</resources>